feat: adds patient endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,9 @@ spring.jpa.hibernate.ddl-auto=update
 fiapgs2023.app.jwtCookieName=fiapgs2023
 fiapgs2023.app.jwtSecret=ZmlhcC1ncy1oZWFsdGgtMjAyMy1hdXRoLXNlY3JldC1rZXk=
 fiapgs2023.app.jwtExpirationMs=86400000
+
+# Logger
+#logging.level.org.springframework.data.jpa=DEBUG
+#logging.level.org.hibernate=DEBUG
+#logging.level.org.springframework.transaction=DEBUG
+#logging.level.org.springframework.web=DEBUG
