feat: adds appointments endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,7 @@ fiapgs2023.app.jwtSecret=ZmlhcC1ncy1oZWFsdGgtMjAyMy1hdXRoLXNlY3JldC1rZXk=
 fiapgs2023.app.jwtExpirationMs=86400000
 
 # Logger
+#logging.level.root=DEBUG
 #logging.level.org.springframework.data.jpa=DEBUG
 #logging.level.org.hibernate=DEBUG
 #logging.level.org.springframework.transaction=DEBUG
